
INSTALLER
	Fixed: Could not unset 'hold' state on packages in some contexts
	Fixed: Ensure that underlying sysvinit scripts are disabled when upstart job is provided (Upstart)
	Fixed: Mitigate possible PHP timezone warning with CLI SAPI
	Fixed: Wrong package name (mysql-client-5.5 instead of mysql-client-5.6) in Debian Stretch packages file
	Pending: VsFTPd support for Debian Stretch - libpam-mysql package not available at this moment

YOUTRACK
	IP-1488 Show SSL-status on domain page
	IP-1500 Update fails when a customer's SSL certificate is invalid or expired

------------------------------------------------------------------------------------------------------------------------
1.2.15
------------------------------------------------------------------------------------------------------------------------

2016-03-02: Laurent Declercq
	RELEASE i-MSCP 1.2.15

BACKEND
	Changed: Usage of custom OpenSSL configuration file for self-signed SSL certificates (iMSCP::OpenSSL)
	Fixed: ALLOW_URL_FOPEN placeholder not replaced in pool configuration files when using per_domain INI level (PHP-FPM)
	Fixed: Exit code not returned to caller on segfault (signal 11)
	Fixed: Missing fallback value for allow_url_fopen in Modules::SubAlias
	Fixed: Obsolete SSL connection encryption method (nginx)

CONFIG
	Added: imscp_panel.service systemd unit file
	Added: OpenSSL configuration template file for self-signed SSL certificates
	Changed: SPF record entries from softfail to hardfail

DAEMON
	Fixed: Missing chdir() and umask() calls
	Fixed: STDIN, STDOUT and STDERR must be redirected to /dev/null
	Updated: Version to 1.2.5

DATABASE
	Added: Default value for the domain.external_mail_dns_ids field
	Added: Default value for the domain_aliasses.external_mail_dns_ids field
	Added: 'status' field to the ftp_users table

FRONTEND
	Fixed: Bad request error when editing PHP settings with per_user INI level (PHP Editor)